Fix spacing after headers and between lines

--- a/static/styles/default.css
+++ b/static/styles/default.css
@@ -5,6 +5,11 @@ body
   font-family: Ubuntu, Cantarell, 'Droid Sans', 'DejaVu Sans', Arial, sans-serif
 }
 
+*
+{
+  line-height: 1.6em
+}
+
 div#main
 {
   max-width: 1000px;
@@ -64,9 +69,19 @@ h1
   font-size: 1.4em;
 }
 
+h1 + p, h2 + p, h3 + p
+{
+  margin-top: 0.2em;
+}
+
+h1, h2, h3 {
+  margin-bottom: 0px;
+}
+
 h2
 {
   font-size: 1.2em;
+  margin-bottom: 0px;
 }
 
 h3
